added deletion of task relationships in creation of task